hphp/hack/test/typecheck/case_type/recursive/subtyping_simple4b.php.exp
ERROR: File "subtyping_simple4b.php", line 4, characters 11-11:
Cyclic type definition (Typing[4014])
  File "subtyping_simple4b.php", line 4, characters 29-29:
  Cyclic use is here
